# job-flow

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
client/: .dockerignore  Dockerfile  nginx.conf  package.json  tailwind.config.js  tsconfig.app.json
client/src/: App.tsx  index.css  main.tsx
client/src/assets/illustrations/: hero-illustration.tsx
client/src/components/layout/: Footer.tsx  Navbar.tsx
client/src/components/ui/: AspectRatio.tsx  Badge.tsx  Button.tsx  Card.tsx  Carousel.tsx  Container.tsx  Dialog.tsx  Logo.tsx  Text.tsx  ThemeToggle.tsx  Tooltip.tsx
client/src/features/auth/: features-data.tsx
client/src/features/landing/: FeaturesSection.tsx  HeroSection.tsx  HowItWorksSection.tsx  PricingSection.tsx  TestimonialsSection.tsx
client/src/pages/: login.tsx  signup.tsx
client/src/providers/: ThemeProvider.tsx
client/src/styles/: fonts.css  theme.ts
src/: main.py
src/api/: __init__.py  applications.py  jobs.py  notifications.py  resumes.py  users.py
src/core/: auth.py  config.py  exceptions.py  openai_client.py  rate_limit.py
src/models/: application.py  job.py  resume.py  user.py
src/repositories/: __init__.py  application.py  base.py  firebase.py  job.py  resume.py  user.py
src/services/: job_service.py  resume_service.py  user_service.py
src/tests/: test_api.py
tests/api/: test_jobs.py  test_users.py
tests/services/: test_resume_service.py
